--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.google.protobuf.tools</groupId>
-    <artifactId>maven-protoc-plugin</artifactId>
+    <artifactId>protoc-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
     <name>Maven Protoc Plugin</name>
-    <version>0.1.11-SNAPSHOT</version>
+    <version>0.1.11</version>
 
     <prerequisites>
         <maven>2.0.6</maven>
